--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pratice</title>
+    <title>hoccss</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -26,8 +26,11 @@
       <div id="homepage">
         <h2> Article </h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...</p>
+        <br/>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...</p>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...</p>
+        <br/>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...</p
+
       </div>
     </section>
 
@@ -37,3 +40,96 @@
  </div>
  </body>
 </html>
+
+
+
+
+
+<body>
+  <header>
+    <h1 id="myName"><span>David Palmer</span></h1>
+    <div id="contactInfo">
+      <ul>
+        <li>Email: participant@gmail.com</li>
+        <li>Phone: 555-555-5555</li>
+        <li>Location: St. Paul, Minnesota</li>
+      </ul>
+    </div>
+
+  </header>
+
+  <section class="left">
+    <h2>Work Experience</h2>
+
+    <div class="workitem">
+      <div class="year">2007</div>
+      <div class="text">
+        <p><span>Graphic Arts Specialist - Press Publications, Inc.</span></br>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      </div>
+    </div>
+
+    <div class="workitem">
+      <div class="year">2010</div>
+      <div class="text">
+        <br><span>Graphic Designer - Minnesota State Colleges & Universities</span></br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</>
+      </div>
+    </div>
+
+    <div class="workitem">
+      <div class="year">2015</div>
+      <div class="text">
+        <br><span>Senior Designer - Minnesota State Colleges & Universities</span></br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      </div>
+    </div>
+
+    <div class="workitem">
+      <div class="year">2019</div>
+      <div class="text">
+        <p><span>UX/UI Designer - State of Minnesota, City of St. Paul</span></br>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </br>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="right">
+    <article>
+      <h2> Goals </h2>
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </article>
+    <article>
+      <h2> Education </h2>
+      <ul>
+        <li>BFA - University of Wisconsin-Green bay</li>
+        <li>MS - University of Michigan-Ann Arbor</li>
+        <li>EDX W3C Microsoft</li>
+      </ul>
+    </article>
+    <article>
+      <h2> Interests </h2>
+      <ul>
+        <li>Sports: Hockey, Soccer, Football</li>
+        <li>Photography & Drawing</li>
+        <li>Fitness & Being Outdoors</li>
+      </ul>
+      <p>I spend most of my extra time with my two beautiful daughters and my extroardinary wife. We enjoy travelling and hiking.
+      </p>
+    </article>
+  </section>
+  <section class="final">
+    <h2> My Skills </h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
+  <footer>
+    <p><span>"Sleep Is For The Rich": </span> <a href=""> Facebook, </a><a href=""> Instagram</a>
+  </footer>
+
+</body>
