update Javascript I hate you

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <footer id="footer">
       <p> Copyright &copy; 2020 Trang </p>
     </footer>
+    <script src="hoc.js">
+      
+    </script>
  </div>
  </body>
 </html>
