--- a/index0.html
+++ b/index0.html
@@ -30,6 +30,8 @@
       <ol style="list-style-type:square;">
         <li> <a href="#whatcanjavascriptdo"> What can JavaScript do? </a></li>
         <li> <a href="#wheretoinsertJavascript"> Where to insert JavaScript? </a> </li>
+        <li><a href="#introductiontoJavaScript"> Introduction to JavaScript </a></li>
+        <li><a href="#variables"> Variables </a></li>
 
       </ol>
     </nav>
@@ -104,6 +106,28 @@
       </ol>
     </section>
 
+    <section>
+      <h2 id="introductiontoJavaScript">
+        Introduction to JavaScript
+      </h2>
+      <ol>
+        <li>Data is printed, or logged, to the console, a panel that displays messages, with <pre> console.log() </pre>. </li>
+        <li>We can write single-line comments with // and multi-line comments between /* and */. </li>
+        <li>There are 7 fundamental data types in JavaScript: strings, numbers, booleans, null, undefined, symbol, and object. </li>
+        <li>Numbers are any number without quotes: 23.8879
+        Strings are characters wrapped in single or double quotes: 'Sample String'. </li>
+        <li>The built-in arithmetic operators include +, -, *, /, and %. </li>
+        <li>Objects, including instances of data types, can have properties, stored information. The properties are denoted with a . after the name of the object, for example: <pre> 'Hello'.length. </pre> </li>
+        <li>Objects, including instances of data types, can have <b>methods which perform actions</b>. Methods are called by appending the object or instance with a period, the method name, and parentheses. For example: <pre>'hello'.toUpperCase()</pre>. </li>
+        <li> We can access properties and methods by using the . dot operator. </li>
+        <li>Built-in objects, including Math, are collections of methods and properties that JavaScript provides. </li>
+      </ol>
+    </section>
+    <section>
+      <h2 id="variables">
+        Variables
+      </h2>
+    </section>
   </div>
 
   <script src="hoc.js">
