--- a/index0.html
+++ b/index0.html
@@ -127,6 +127,32 @@
       <h2 id="variables">
         Variables
       </h2>
+      <p> Variables are not values; they act like containers containing values and represent them with a name. There are 3 keywords to declare a variable. They are var, let (can reassign values) and const(can not reassign values). Let and const have been introduced since 2016 in ES6. var and let can first declare varibles without values while const doesnt. 
+      </p>
+      <p>
+        <pre>
+        var myName = 'Trang';
+        console.log(myName);
+        // Output: Trang
+      </pre>
+      </p>
+      <p>
+        <pre>
+          let meal = 'Enchiladas';
+          console.log(meal); // Output: Enchiladas
+          meal = 'Burrito';
+          console.log(meal); // Output: Burrito
+        </pre>
+      </p>
+      <p>
+        <pre>
+          let price;
+          console.log(price); // Output: undefined
+          price = 350;
+          console.log(price); // Output: 350
+        </pre>
+      </p>
+
     </section>
   </div>
 
