--- a/index0.html
+++ b/index0.html
@@ -33,6 +33,7 @@
         <li><a href="#introductiontoJavaScript"> Introduction to JavaScript </a></li>
         <li><a href="#variables"> Variables </a></li>
         <li><a href="#conditionalStatements"> Conditional Statements</a></li>
+        <li><a href="#function"> function</a></li>
 
       </ol>
     </nav>
@@ -168,8 +169,7 @@
     </section>
 
     <section>
-      <h2 id="conditionalStatements">
-        Conditional Statements
+      <h2 id="conditionalStatements"> Conditional Statements </h2>
         <ol>
           <li> An if statement checks a condition and will execute a task if that condition evaluates to true. </li>
           <li> if...else statements make binary decisions and execute different code blocks based on a provided condition. </li>
@@ -180,10 +180,11 @@
           <li> The bang operator, !, switches the truthiness and falsiness of a value. <li>
           <li>The ternary operator is shorthand to simplify concise if...else statements.</li>
           <li>A switch statement can be used to simplify the process of writing multiple else if statements. The break keyword stops the remaining cases from being checked and executed in a switch statement</li>
-      </h2>
+        </ol>
     </section>
-
-
+    <section>
+      <h2 id="function"> Function </h2>
+    </section>
 
   </div>
 
