--- a/index0.html
+++ b/index0.html
@@ -33,7 +33,8 @@
         <li><a href="#introductiontoJavaScript"> Introduction to JavaScript </a></li>
         <li><a href="#variables"> Variables </a></li>
         <li><a href="#conditionalStatements"> Conditional Statements</a></li>
-        <li><a href="#function"> function</a></li>
+        <li><a href="#function"> Function</a></li>
+        <li><a href="#scope"> Scope </a></li>
 
       </ol>
     </nav>
@@ -185,6 +186,10 @@
     <section>
       <h2 id="function"> Function </h2>
     </section>
+    <section>
+      <h2 id="scope"> Scope </h2>
+    </section>
+
 
   </div>
 
