--- a/index0.html
+++ b/index0.html
@@ -35,6 +35,8 @@
         <li><a href="#conditionalStatements"> Conditional Statements</a></li>
         <li><a href="#function"> Function</a></li>
         <li><a href="#scope"> Scope </a></li>
+        <li><a href="#array"> Array </a></li>
+        <li><a href="#loops"> Loops </a></li>
 
       </ol>
     </nav>
@@ -185,9 +187,33 @@
     </section>
     <section>
       <h2 id="function"> Function </h2>
+      <p>There are normal function, function expression, arrow function, consise function </p>
     </section>
     <section>
       <h2 id="scope"> Scope </h2>
+      <p>there are global and block scope. Avoid global pollution.</p>
+    </section>
+    <section>
+      <h2 id="array"> Array </h2>
+        <ol>
+          <li> Arrays are lists that store data in JavaScript.
+          Arrays are created with brackets []. </li>
+          <li> Each item inside of an array is at a numbered position, or index, starting at 0. </li>
+          <li> We can access one item in an array using its index, with syntax like: myArray[0]. </li>
+          <li> We can also change an item in an array using its index, with syntax like myArray[0] = 'new string'; </li>
+          <li> Arrays have a length property, which allows you to see how many items are in an array. </li>
+          <li> Arrays have their own methods, including .push() and .pop(), which add and remove items from an array, respectively. </li>
+          <li> Arrays have many methods that perform different tasks, such as .slice() and .shift(), you can find documentation at the Mozilla Developer Network website. </li>
+          <li> Some built-in methods are mutating, meaning the method will change the array, while others are not mutating. You can always check the documentation. </li>
+          <li> Variables that contain arrays can be declared with let or const. Even when declared with const, arrays are still mutable. However, a variable declared with const cannot be reassigned. </li>
+          <li> Arrays mutated inside of a function will keep that change even outside the function. </li>
+          <li> Arrays can be nested inside other arrays. </li>
+          <li> To access elements in nested arrays chain indices using bracket notation. </li>
+        </ol>
+    </section>
+    <section>
+      <h2 id="loops"> Loops </h2>
+      <p>Need to learn again. while and do while loops are too abstract</p>
     </section>
 
 
