--- a/surveyform.html
+++ b/surveyform.html
@@ -8,78 +8,77 @@
   <title>Survey Form</title>
 </head>
 <body>
-  <div id="container">
-    
+  <div class="container">
+
     <div id="header">
       <h1 id="title"> freeCodeCamp Survey Form</h1>
       <p id="description"> Thank you for taking the time to help us improve the platform </p>
     </div>
 
     <div id="form">
-    <form id="survey-form">
-      <div class="form-group">
-        <label  for="name" id="name-label" >Name</label> <br>
-        <input type="text" id="name" class="form-control" name="name" placeholder="Enter your name" required="">
-      </div>
+      <form id="survey-form">
+        <div class="form-group">
+          <label  for="name" id="name-label" >Name</label> <br>
+          <input type="text" id="name" class="form-control" name="name" placeholder="Enter your name" required="">
+        </div>
 
-      <div class="form-group">
-        <label  for="email" id="email-label">Email</label> <br>
-        <input type="email" id="email" class="form-control" name="email" placeholder="Enter your email" required="">
-      </div>
+        <div class="form-group">
+          <label  for="email" id="email-label">Email</label> <br>
+          <input type="email" id="email" class="form-control" name="email" placeholder="Enter your email" required="">
+        </div>
 
-      <div class="form-group">
-        <label  for="Age" id="number-label" >Age (optional) </label> <br>
-        <input type="number" id="number" class="form-control" name="number" placeholder="Enter your age" min="10" max="150" required="">
-      </div>
+        <div class="form-group">
+          <label  for="Age" id="number-label" >Age (optional) </label> <br>
+          <input type="number" id="number" class="form-control" name="number" placeholder="Enter your age" min="10" max="150" required="">
+        </div>
 
-      <div class="form-group">
-        <p>Which option best describes your current role?</p>
-        <select name="role" id="dropdown" class="form-control" required="">
-          <option value="" selected="" disable="">Select current role</option>
-          <option value="student">Student</option>
-          <option value="job">Full time</option>
-          <option value="learner">Full time learner</option>
-          <option value="no">Refer not to say</option>
-          <option value="other">Other</option>
-        </select>
-      </div>
+        <div class="form-group">
+          <p>Which option best describes your current role?</p>
+          <select name="role" id="dropdown" class="form-control" required="">
+            <option value="" selected="" disable="">Select current role</option>
+            <option value="student">Student</option>
+            <option value="job">Full time</option>
+            <option value="learner">Full time learner</option>
+            <option value="no">Refer not to say</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
 
-      <div class="form-group">
-        <p>Would you recommend freeCodeCamp to a friend?</p>
+        <div class="form-group">
+          <p>Would you recommend freeCodeCamp to a friend?</p>
+          <label><input type="radio" class="input-radio" name="user-recommend" value="Definitly" check="">Definitely</label>
+          <label><input type="radio" class="input-radio" name="user-recommend" value="maybe" check="">Maybe</label>
+          <label><input type="radio" class="input-radio" name="user-recommend" value="notSure" check="">Not sure</label>
+        </div>
 
-        <label><input type="radio" class="input-radio" name="user-recommend" value="Definitly" check="">Definitely</label>
-        <label><input type="radio" class="input-radio" name="user-recommend" value="maybe" check="">Maybe</label>
-        <label><input type="radio" class="input-radio" name="user-recommend" value="notSure" check="">Not sure</label>
+        <div class="form-group">
+          <p>What is your favorite feature of freeCodeCamp? </p>
+          <select name="mostLike" id="most-like" class="form-control" required="">
+            <option value="" selected="" disable=""> Select an option</option>
+            <option value="challenges">Challenges</option>
+            <option value="projects">Projects</option>
+            <option value="community">Community</option>
+            <option value="openSource">Open source</option>
+          </select>
+        </div>
 
-      </div>
+        <div class="form-group">
+          <p>What would you like to see improved? (Check all that apply)</p>
+          <label><input type="checkbox" class="input-checkbox" name="refer" value="front-end-dev" >Front-end dev</label>
+          <label><input type="checkbox" class="input-checkbox" name="refer" value="back-end-dev" >Back-end dev</label>
+          <label><input type="checkbox" class="input-checkbox" name="refer" value="data-visualization" >Data visualization</label>
+        </div>
 
-      <div class="form-group">
-        <p>What is your favorite feature of freeCodeCamp? </p>
-        <select name="mostLike" id="most-like" class="form-control" required="">
-          <option value="" selected="" disable=""> Select an option</option>
-          <option value="challenges">Challenges</option>
-          <option value="projects">Projects</option>
-          <option value="community">Community</option>
-          <option value="openSource">Open source</option>
-        </select>
-      </div>
+        <div class="form-group">
+          <p>Any comments or suggestions?</p>
+          <textarea name="comment" id="input-comment" cols="30" rows="10" placeholder="Enter comments here..."></textarea>
+        </div>
 
-      <div class="form-group">
-        <p>What would you like to see improved? (Check all that apply)</p>
-        <label><input type="checkbox" class="input-checkbox" name="refer" value="front-end-dev" >Front-end dev</label>
-        <label><input type="checkbox" class="input-checkbox" name="refer" value="back-end-dev" >Back-end dev</label>
-        <label><input type="checkbox" class="input-checkbox" name="refer" value="data-visualization" >Data visualization</label>
-      </div>
+        <div class="form-group">
+          <button id="submit" class="submit-botton" type="submit"> Submit</button>
+        </div>
 
-      <div class="form-group">
-        <p>Any comments or suggestions?</p>
-        <textarea name="comment" id="input-comment" cols="30" rows="10" placeholder="Enter comments here..."></textarea>
-      </div>
-
-      <div class="form-group">
-        <button id="submit" class="submit-botton" type="submit"> Submit</button>
-      </div>
-    </form>
+      </form>
     </div>
   </div>
 
