nav bar of landing page

--- a/surveyform.html
+++ b/surveyform.html
@@ -12,7 +12,7 @@
 
     <div id="header">
       <h1 id="title"> freeCodeCamp Survey Form</h1>
-      <p id="description"> Thank you for taking the time to help us improve the platform </p>
+      <h4 id="description"> Thank you for taking the time to help us improve the platform </h4>
     </div>
 
     <div id="form">
