--- a/landingpage.html
+++ b/landingpage.html
@@ -21,7 +21,12 @@
       </ul>
     </nav>
   </header>
-
+  <section id="hero">
+    <h2>Handcrafted, home-made masterpieces</h2>
+    <form id="form" action="https://www.freecodecamp.org/email-submit"></form>
+    <input type="email" id="email" placeholder="Enter your email address" required="">
+    <input type="submit" id="submit" value="Get started">
+  </section>
 
 
 </div>
