--- a/landingpage.html
+++ b/landingpage.html
@@ -27,7 +27,41 @@
     <input type="email" id="email" placeholder="Enter your email address" required="">
     <input type="submit" id="submit" value="Get started">
   </section>
+  <div class="container">
+    <section id="features">
+      <div class="grid">
+        <div class="icon">
+          <image class="fa fa-3x fa-fire" src="/image/fire.png" alt="flame">
+        </div>
+        <div class="mesc">
+          <h2>Premium Materials</h2>
+          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase. </p>
+        </div>
+      </div>
 
+     <div class="grid"> 
+        <div class="icon">
+          <image class="fa fa-3x fa-truck" src="/image/truck.png" alt="truck">
+        </div>
+        <div class="mesc">
+          <h2>Fast Shipping</h2>
+          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied. </p>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="icon">
+          <image class="fa fa-3x fa-battery" src="/image/battery(1).png" alt="battery">
+        </div>
+        <div class="mesc">
+          <h2>Quality Assurance</h2>
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+        </div>
+      </div>
+
+    </section>
+
+  </div>
 
 </div>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
