--- a/landingpage.html
+++ b/landingpage.html
@@ -31,7 +31,7 @@
     <section id="features">
       <div class="grid">
         <div class="icon">
-          <image class="fa fa-3x fa-fire" src="/image/fire.png" alt="flame">
+          <image class="fa fa-3x fa-fire" src="https://imgur.com/a/Ip8FDLR" alt="flame">
         </div>
         <div class="mesc">
           <h2>Premium Materials</h2>
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-     <div class="grid"> 
+     <div class="grid">
         <div class="icon">
           <image class="fa fa-3x fa-truck" src="/image/truck.png" alt="truck">
         </div>
