--- a/landingpage.html
+++ b/landingpage.html
@@ -31,7 +31,7 @@
     <section id="features">
       <div class="grid">
         <div class="icon">
-          <image class="fa fa-3x fa-fire" src="https://imgur.com/a/Ip8FDLR" alt="flame">
+          <image class="fa fa-3x fa-fire" src="https://imgur.com/YYgLcFS" alt="flame">
         </div>
         <div class="mesc">
           <h2>Premium Materials</h2>
@@ -41,7 +41,7 @@
 
      <div class="grid">
         <div class="icon">
-          <image class="fa fa-3x fa-truck" src="/image/truck.png" alt="truck">
+          <image class="fa fa-3x fa-truck" src="https://imgur.com/aaxhVI7" alt="truck">
         </div>
         <div class="mesc">
           <h2>Fast Shipping</h2>
@@ -51,7 +51,7 @@
 
       <div class="grid">
         <div class="icon">
-          <image class="fa fa-3x fa-battery" src="/image/battery(1).png" alt="battery">
+          <image class="fa fa-3x fa-battery" src="https://imgur.com/LsZlqgz" alt="battery">
         </div>
         <div class="mesc">
           <h2>Quality Assurance</h2>
