--- a/landingpage.html
+++ b/landingpage.html
@@ -31,7 +31,7 @@
     <section id="features">
       <div class="grid">
         <div class="icon">
-          <image class="fa fa-3x fa-fire" src="https://imgur.com/YYgLcFS" alt="flame">
+          <image class="fa fa-3x fa-fire" src="https://i.imgur.com/YYgLcFS.png" alt="flame">
         </div>
         <div class="mesc">
           <h2>Premium Materials</h2>
