--- a/landingpage.html
+++ b/landingpage.html
@@ -41,7 +41,7 @@
 
      <div class="grid">
         <div class="icon">
-          <image class="fa fa-3x fa-truck" src="https://imgur.com/aaxhVI7" alt="truck">
+          <image class="fa fa-3x fa-truck" src="https://i.imgur.com/aaxhVI7.png" alt="truck">
         </div>
         <div class="mesc">
           <h2>Fast Shipping</h2>
@@ -51,7 +51,7 @@
 
       <div class="grid">
         <div class="icon">
-          <image class="fa fa-3x fa-battery" src="https://imgur.com/LsZlqgz" alt="battery">
+          <image class="fa fa-3x fa-battery" src="https://i.imgur.com/LsZlqgz.png" alt="battery">
         </div>
         <div class="mesc">
           <h2>Quality Assurance</h2>
