--- a/landingpage.html
+++ b/landingpage.html
@@ -25,7 +25,7 @@
     <h2>Handcrafted, home-made masterpieces</h2>
     <form id="form" action="https://www.freecodecamp.org/email-submit"></form>
     <input type="email" id="email" placeholder="Enter your email address" required="">
-    <input type="submit" id="submit" value="Get started">
+    <input type="submit" class="button" id="submit" value="Get started">
   </section>
   <div class="container">
     <section id="features">
@@ -61,6 +61,55 @@
 
     </section>
 
+    <section id="howItWorks">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+
+    <section id="pricing">
+      <div id="tenor" class="product">
+        <div class="level">Ternor Trombone</div>
+        <h2>$600</h2>
+        <ol>
+          <li> Lorem ipsum </li>
+          <li> Lorem ipsum </li>
+          <li>Lorem ipsum dolor</li>
+          <li> Lorem ipsum </li>
+        </ol>
+        <button class="button">Submit </button>
+      </div>
+
+      <div id="bass" class="product">
+        <div class="level">Bass Trombone</div>
+        <h2>$900</h2>
+        <ol>
+          <li> Lorem ipsum </li>
+          <li> Lorem ipsum </li>
+          <li>Lorem ipsum dolor</li>
+          <li> Lorem ipsum </li>
+        </ol>
+        <button class="button">Submit </button>
+      </div>
+
+      <div id="vavle" class="product">
+        <div class="level">Vavle Trombone</div>
+        <h2>$1200</h2>
+        <ol>
+          <li> Lorem ipsum </li>
+          <li> Lorem ipsum </li>
+          <li>Lorem ipsum dolor</li>
+          <li> Lorem ipsum </li>
+        </ol>
+        <button class="button">Submit </button>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li> <a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <span>Copyright 2016, Original Trombones</span>
+    </footer>
   </div>
 
 </div>
