--- a/landingpage.html
+++ b/landingpage.html
@@ -15,7 +15,7 @@
     </div>
     <nav id="nav-bar">
       <ul>
-        <li><a href="#feature" class="nav-link">Feature</a></li>
+        <li><a href="#features" class="nav-link">Features</a></li>
         <li><a href="#howItWorks" class="nav-link">How it works</a></li>
         <li><a href="#pricing" class="nav-link">Pricing</a></li>
       </ul>
