--- a/landingpage.html
+++ b/landingpage.html
@@ -24,8 +24,8 @@
   <section id="hero">
     <h2>Handcrafted, home-made masterpieces</h2>
     <form id="form" action="https://www.freecodecamp.org/email-submit"></form>
-    <input type="email" id="email" placeholder="Enter your email address" required="">
-    <input type="submit" class="button" id="submit" value="Get started">
+    <input id="email" type="email"  placeholder="Enter your email address" required="">
+    <input id="submit" type="submit" class="button" value="Get started">
   </section>
   <div class="container">
     <section id="features">
@@ -62,7 +62,7 @@
     </section>
 
     <section id="howItWorks">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <section id="pricing">
