--- a/fortfolio.html
+++ b/fortfolio.html
@@ -74,7 +74,7 @@
 
   <footer>
     <p>**This is just a fake portfolio. All the projects and contact details given are not real. </p>
-    <p>© Created for freeCodeCamp <a href="https://www.freecodecamp.com/" target=_blank>freeCodeCamp</a></p>
+    <p>© Created for <a href="https://www.freecodecamp.com/" target=_blank>freeCodeCamp</a></p>
   </footer>
 
 
